version/0.25/_sources/api/solver/_autosummary/settings/reference_frame_axis_direction.rst.txt
:orphan:

.. _reference_frame_axis_direction:

reference_frame_axis_direction
==============================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.reference_frame_axis_direction.reference_frame_axis_direction
    :show-inheritance:

.. rubric:: Methods

========================================   ==========================================

Method                                                                        Summary

========================================   ==========================================
:ref:`list_properties <list_properties>`          List properties of selected object.

:ref:`resize <resize>`                         Set number of objects for list-object.

========================================   ==========================================

.. rubric:: Named object type

:ref:`reference_frame_velocity_child <reference_frame_velocity_child>`


.. rubric:: Included in:

==========================================   ===========================================

Parent                                                                           Summary

==========================================   ===========================================
:ref:`reference_frame <reference_frame_2>`       Reference frame settings for this zone.

:ref:`reference_frame <reference_frame_3>`                           Help not available.

==========================================   ===========================================

